<resources>
    <string name="app_name">Gadgeothek</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_gadgets">Gadgets</string>
    <string name="action_loans">My Loans</string>
    <string name="action_reservations">My Reservation</string>
    <string name="action_reservation_new">Add Reservation</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_student_id">Student ID</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_main">Main Activity</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to settings -->
    <string name="prompt_spinner">Choose a server</string>
    <string name="prompt_server">Server address</string>
    <string-array name="server_array">
        <item>MGE1</item>
        <item>MGE2</item>
        <item>MGE3</item>
        <item>MGE4</item>
        <item>MGE5</item>
        <item>MGE6</item>
        <item>MGE7</item>
        <item>MGE8</item>
        <item>Custom</item>
    </string-array>

    <string name="action_reservation_add">Add Reservation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_start">Sign in</string>
    <string name="action_sign_in">Log in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="action_registration">No account yet? Create one</string>
    <string name="action_add_reservation">Reserve gadget</string>
    <string name="reservations_empty_list">You have no reservations yet.</string>
    <string name="loans_empty_list">You have no loans yet.</string>
    <string name="gadgets_empty_list">There are no gadgets yet.</string>
</resources>
